<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">research</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="header">too shy to show !</string>
    <string name="title_activity_main">demo</string>
    <string name="title_activity_animator">AnimatorActivity</string>
    <string name="key_frame">key frame animator</string>
    <string name="vanish_animator">vanish animator</string>
    <string name="transition">transition</string>
    <string name="value_animator">value animator</string>
    <string name="title_activity_bezier_animation">BezierAnimation</string>
    <string name="line">line</string>
    <string name="quadratic">quadratic</string>
    <string name="start">start</string>
    <string name="end">end</string>
    <string name="resume">resume</string>
    <string name="pause">pause</string>
    <string name="reverse">reverse</string>
    <string name="scale">scale</string>
    <string name="alpha">alpha</string>
    <string name="rotate">rotate</string>
    <string name="title_activity_view_animator">ViewAnimatorActivity</string>
    <string name="flipper">flipper</string>
    <string name="text_switcher">text switcher</string>
    <string name="image_switcher">image switcher</string>
    <string name="first">first view</string>
    <string name="second">second view</string>
    <string name="third">third view</string>
    <string name="fourth">fourth view</string>
    <string name="stop">stop</string>
    <string name="previous">prev</string>
    <string name="next">next</string>
    <string name="product">product</string>
    <string name="shopping_cart">shopping_cart</string>
    <string name="fill_before">fill before</string>
    <string name="fill_after">fill after</string>
    <string name="translate">translate</string>
    <string name="rotate_translate">rotate+translate</string>
    <string name="skew_horizontal">skew horizontal</string>
    <string name="skew_vertical">skew vertical</string>
    <string name="skew">skew</string>
    <string name="symmetry_horizontal">symmetry horizontal</string>
    <string name="symmetry_vertical">symmetric vertical</string>
    <string name="symmetry">symmetric</string>
    <string name="start_service">start service</string>
    <string name="stop_service">stop service</string>
    <string name="bind_service">bind service</string>
    <string name="unbind_service">unbind service</string>
    <string name="touch_event_activity">touch event</string>
    <string name="take_photo_thumbnail">thumbnail</string>
    <string name="take_photo_full_size">full size</string>
    <string name="take_video">take video</string>
    <string name="title_activity_zoom">ZoomActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hide">hide</string>
    <string name="reveal">reveal</string>
    <string name="hue_label">hue</string>
    <string name="saturation_label">saturation</string>
    <string name="brightness_label">brightness</string>
    <string name="heart">heart</string>
</resources>
