<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".animator.base.BasicAnimatorActivity">

    <LinearLayout
        android:id="@+id/vanish_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:background="@color/light_pink">

        <TextView
            android:id="@+id/vanish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vanish_animator" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/key_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_above="@+id/transition_layout"
        android:layout_below="@+id/vanish_layout"
        android:background="@color/pink" >

        <TextView
            android:id="@+id/key_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_frame" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/transition_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:background="@color/hot_pink" >

        <TextView
            android:id="@+id/value_animator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_animator" />
    </LinearLayout>


</LinearLayout>