<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".animator.base.ViewAnimatorActivity">


    <fragment
        android:id="@+id/fragment_flipper"
        android:name="com.limxtop.research.animator.base.ViewAnimatorFlipperActivityFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:layout="@layout/fragment_view_animator_flipper" />

    <fragment
        android:id="@+id/fragment_image_switcher"
        android:name="com.limxtop.research.animator.base.ViewAnimatorImageSwitcherActivityFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:layout="@layout/fragment_view_animator_image_switcher" />

    <fragment
        android:id="@+id/fragment_text_switcher"
        android:name="com.limxtop.research.animator.base.ViewAnimatorTextSwitcherActivityFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:layout="@layout/fragment_view_animator_text_switcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lavender"
        android:gravity="center"
        android:layout_margin="@dimen/fab_margin">
        <!--android:background="@drawable/divider_shape"-->
        <Button
            android:id="@+id/button_left"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:background="@drawable/round_rect_shape"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/flipper" />

        <Button
            android:id="@+id/button_center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:background="@drawable/round_rect_shape"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/image_switcher" />

        <Button
            android:id="@+id/button_right"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:background="@drawable/round_rect_shape"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/text_switcher" />
    </LinearLayout>


</LinearLayout>
